fix: удалить ненужны z-index

--- a/blocks/card/__delete-button/card__delete-button.css
+++ b/blocks/card/__delete-button/card__delete-button.css
@@ -2,7 +2,6 @@
   position: absolute;
   top: 18px;
   right: 15px;
-  z-index: 1;
   width: 18px;
   height: 19px;
   border: none;
